--- a/package.json
+++ b/package.json
@@ -9,34 +9,36 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "~38.0.8",
-    "expo-av": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-av": "~10.1.3",
+    "expo-modules-core": "~0.4.10",
+    "expo-status-bar": "~1.1.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-app-intro": "^1.1.5",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-modalize": "^2.0.6",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-percentage-circle": "^1.0.7",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-stars": "^1.2.1",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-player": "^0.10.1",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "0.17.1",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "^7.12.9",
+    "babel-preset-expo": "8.5.1"
   },
   "private": true
 }
